; ModuleID = '/home/carl/AnghaBench/kphp-kdb/copyfast/extr_copyfast-server.c_rpc_send_delays_old.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/copyfast/extr_copyfast-server.c_rpc_send_delays_old.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }
%struct.rpc_delays_old = type { i32, i32 }

@verbosity = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [59 x i8] c"rpc_send_delays_old: slow_delay = %lf, medium_delay = %lf\0A\00", align 1
@slow_delay = common dso_local global i32 0, align 4
@medium_delay = common dso_local global i32 0, align 4
@Q = common dso_local global i64 0, align 8
@RPC_TYPE_DELAYS_OLD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rpc_send_delays_old(%struct.connection* %0) #0 {
  %2 = alloca %struct.connection*, align 8
  %3 = alloca %struct.rpc_delays_old*, align 8
  store %struct.connection* %0, %struct.connection** %2, align 8
  %4 = load i32, i32* @verbosity, align 4
  %5 = icmp sge i32 %4, 2
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load i32, i32* @stderr, align 4
  %8 = load i32, i32* @slow_delay, align 4
  %9 = load i32, i32* @medium_delay, align 4
  %10 = call i32 @fprintf(i32 %7, i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str, i64 0, i64 0), i32 %8, i32 %9)
  br label %11

11:                                               ; preds = %6, %1
  %12 = load i64, i64* @Q, align 8
  %13 = inttoptr i64 %12 to %struct.rpc_delays_old*
  store %struct.rpc_delays_old* %13, %struct.rpc_delays_old** %3, align 8
  %14 = load %struct.rpc_delays_old*, %struct.rpc_delays_old** %3, align 8
  %15 = load %struct.connection*, %struct.connection** %2, align 8
  %16 = load i32, i32* @RPC_TYPE_DELAYS_OLD, align 4
  %17 = call i32 @rpc_create_query(%struct.rpc_delays_old* %14, i32 8, %struct.connection* %15, i32 %16)
  %18 = load i32, i32* @medium_delay, align 4
  %19 = load %struct.rpc_delays_old*, %struct.rpc_delays_old** %3, align 8
  %20 = getelementptr inbounds %struct.rpc_delays_old, %struct.rpc_delays_old* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  %21 = load i32, i32* @slow_delay, align 4
  %22 = load %struct.rpc_delays_old*, %struct.rpc_delays_old** %3, align 8
  %23 = getelementptr inbounds %struct.rpc_delays_old, %struct.rpc_delays_old* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 4
  %24 = load %struct.rpc_delays_old*, %struct.rpc_delays_old** %3, align 8
  %25 = load %struct.connection*, %struct.connection** %2, align 8
  %26 = call i32 @rpc_send_query(%struct.rpc_delays_old* %24, %struct.connection* %25)
  ret i32 %26
}

declare dso_local i32 @fprintf(i32, i8*, i32, i32) #1

declare dso_local i32 @rpc_create_query(%struct.rpc_delays_old*, i32, %struct.connection*, i32) #1

declare dso_local i32 @rpc_send_query(%struct.rpc_delays_old*, %struct.connection*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
